src/components/screens/productsPage/BarkInfo/BarkInfo.module.scss
@import '@/styles/variables';

.section {
  opacity: 0;

  & div,
  p {
    margin-bottom: 30px;
  }

  & div:last-child {
    margin-bottom: 0;
  }

  &_animate {
    transition: opacity 0.8s;
    opacity: 1;
  }
}

.title {
  margin-bottom: 35px;
}

.mark {
  font-size: 1.2rem;
}

.listTitle {
  margin-bottom: 10px;
  padding-bottom: 10px;
  font-size: 1.2rem;
}

.list {
  padding-left: 20px;
  list-style: disc;

  & li {
    padding: 5px 0;
  }

  & li:last-child {
    padding-bottom: 0;
  }
}

.itemTitle {
  font-style: italic;
}

